--- a/.gitattributes
+++ b/.gitattributes
@@ -6,4 +6,6 @@ models/bert-election2020-twitter-stance-biden/model.safetensors filter=lfs diff=
 /home/dino/Documents/SP24/.git/objects/dd/9e0b74131a1807d292c35c141a460713c18c78 filter=lfs diff=lfs merge=lfs -text
 /home/dino/Documents/SP24/models/bert-election2020-twitter-stance-biden/model.safetensors filter=lfs diff=lfs merge=lfs -text
 /home/dino/Documents/SP24/bert_model/python_model.pkl filter=lfs diff=lfs merge=lfs -text
+*.pkl filter=lfs diff=lfs merge=lfs -text
+*.safetensors filter=lfs diff=lfs merge=lfs -text
 bert_model/python_model.pkl filter=lfs diff=lfs merge=lfs -text
