--- a/.gitattributes
+++ b/.gitattributes
@@ -8,4 +8,5 @@ models/bert-election2020-twitter-stance-biden/model.safetensors filter=lfs diff=
 /home/dino/Documents/SP24/bert_model/python_model.pkl filter=lfs diff=lfs merge=lfs -text
 *.pkl filter=lfs diff=lfs merge=lfs -text
 *.safetensors filter=lfs diff=lfs merge=lfs -text
+*.pth filter=lfs diff=lfs merge=lfs -text
 bert_model/python_model.pkl filter=lfs diff=lfs merge=lfs -text
