--- a/.gitattributes
+++ b/.gitattributes
@@ -10,3 +10,5 @@ models/bert-election2020-twitter-stance-biden/model.safetensors filter=lfs diff=
 *.safetensors filter=lfs diff=lfs merge=lfs -text
 *.pth filter=lfs diff=lfs merge=lfs -text
 bert_model/python_model.pkl filter=lfs diff=lfs merge=lfs -text
+*.pt filter=lfs diff=lfs merge=lfs -text
+*.csv filter=lfs diff=lfs merge=lfs -text
