--- a/mlruns/0/230053363f414b25a23733838e060ff4/meta.yaml
+++ b/mlruns/0/230053363f414b25a23733838e060ff4/meta.yaml
@@ -1,8 +1,9 @@
 artifact_uri: file:///home/dino/Documents/SP24/mlruns/0/230053363f414b25a23733838e060ff4/artifacts
+deleted_time: 1709566469712
 end_time: null
 entry_point_name: ''
 experiment_id: '0'
-lifecycle_stage: active
+lifecycle_stage: deleted
 run_id: 230053363f414b25a23733838e060ff4
 run_name: casual-shoat-766
 run_uuid: 230053363f414b25a23733838e060ff4
